<resources>
    <string name="app_name">読メモ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="searchBar">label_search_title</string>
    <string name="searchHint">書籍名またはISBN</string>
    <string name="SortDatetimeDESC">新しい順に並べる</string>
    <string name="SortDatetimeASC">古い順に並べる</string>
    <string name="toggleMenuOfMainView_Category">Category</string>
    <string name="toggleMenuOfMainView_AllBooks">全ての本</string>
    <string name="toggleMenuOfMainView_HaveReadBooks">読んだ本</string>
    <string name="toggleMenuOfMainView_ReadingBooks">読んでいる本</string>
    <string name="toggleMenuOfMainView_WillReadBooks">読みたい本</string>
    <string name="toggleMenuOfMainView_Note">Note</string>
    <string name="toggleMenuOfMainView_ReadingRecord">読書記録</string>
    <string name="toggleMenuOfMainView_SearchingBooks">本を探す</string>
    <string name="RecordedBooksListImgDescription">表紙</string>
    <string name="toolbarTitleOfBookEditView_Editing">本を編集する</string>
    <string name="EditSaveBtnOfEditView">修正する</string>
    <string name="toolbarTitleOfBookEditView_Register">本を登録する</string>
    <string name="BookStatusNameOfEditView_HaveRead">読んだ本</string>
    <string name="BookStatusNameOfEditView_Reading">読んでいる本</string>
    <string name="BookStatusNameOfEditView_WillRead">読みたい本</string>
    <string name="TitleFieldLabelOfEditView">本のタイトル</string>
    <string name="AuthorFieldLabelOfEditView">出版社</string>
    <string name="memoFieldLabelOfEditView">読書メモ</string>
    <string name="recordDeleteBtnLabelOfEditView">削除</string>
    <string name="statusCheckboxLabelOfEditView">この本は？</string>
    <string name="saveBtnLabelOfEditView">登録する</string>
    <string name="publisherFieldLabelOfEditView">出版社</string>
    <string name="toolbarTitleOfBookEditView">読書記録</string>
    <string name="methodOfCountingBooks">冊</string>
    <string name="methodOfCountingPages">ページ</string>
    <string name="methodOfNamingBookTitle">タイトル</string>
    <string name="methodOfNamingAuthor">著者</string>
    <string name="methodOfNamingPublisher">出版社</string>
    <string name="methodOfNamingOutline">概要</string>
    <string name="genreNameOfComic">コミック</string>
    <string name="genreNameOfNovel">小説</string>
    <string name="genreNameOfBusiness">ビジネス</string>
    <string name="genreNameOfoPaperback">文庫</string>
    <string name="genreNameOfPocketbook">新書</string>
    <string name="genreNameOfLightNovel">ラノベ</string>
    <string name="genreNameOfAll">すべて</string>
    <string name="SearchResultLabel_Title">の検索結果</string>
    <string name="SearchResultLabel_Author">の本</string>
    <string name="AlertOfEditView_BackWithoutSaveAfterEdit">修正は保存されませんがよろしいですか？</string>
    <string name="AlertOfEditView_BackWithoutSaveAfterAdd">入力を破棄してよろしいですか？</string>
    <string name="AlertOfEditView_ClickedSearchBtnOneWordOrLess">2文字以上入力してください</string>
    <string name="AlertOfEditView_ClickRegisterBtnWithoutFillingTitle">タイトルを入力してください</string>
    <string name="AlertOfEditView_EditRecordComplete">修正しました</string>
    <string name="AlertMessage_AddRecordComplete">登録しました</string>
    <string name="AlertOfEditView_ConfirmRecordDeleting">削除してもよろしいですか？</string>
    <string name="AlertOfEditView_FailureAPIResponse">エラーが発生しました</string>
    <string name="AlertMessage_PleaseCheckNetworkConnection">ネットワーク接続を確認してください</string>
    <string name="AlertMessage_GetNullBookInSearchingByISBN">該当する本が見つかりませんでした\nISBNが正しいかどうかご確認ください</string>
    <string name="AlertMessage_ApiDisableInSearchingByBookTitle">リクエストが混み合っております\nしばらくお待ちください</string>
    <string name="AlertMessage_AuthorDoesNotExist">著者が存在しません</string>
    <string name="AlertMessage_PublisherDoesNotExits">出版社が存在しません</string>
    <string name="btnAddingBookWillRead">読みたい本に追加する</string>
    <string name="btnOpeningRakutenBooks">楽天ブックスで詳細を見る</string>
    <string name="btnSearchingByAuthor">この作者の本を検索</string>
    <string name="btnSearchingByPublisher">この出版社の本を検索</string>
    <string name="methodOfNamingNumberOfBooksHaveRead">読んだ冊数</string>
    <string name="btnChangingOneMonthLater">一か月戻る</string>
    <string name="btnChangingOneMonthAgo">一か月進める</string>
    <string name="labelOfAmountOfPages">合計ページ数</string>
    <!-- 後で修正する必要あり -->
    <string name="ReadMemoApiServer_Domain">http://10.0.2.2:3000</string>
</resources>
