<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.readmemo.BookFilterActivity">
    <GridView
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/searchedBooksListInSearchView"
            app:layout_constraintStart_toEndOf="@+id/btnOfChangingGenreToCommic"
            android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
            android:visibility="visible"/>

    <Button
            android:text="@string/genreNameOfComic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOfChangingGenreToCommic"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary_white"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

    <Button
            android:text="@string/genreNameOfNovel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOfChangingGenreToNovel"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnOfChangingGenreToCommic"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorPrimary_white"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

    <Button
            android:text="@string/genreNameOfBusiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOfChangingGenreToBusiness"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnOfChangingGenreToNovel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorPrimary_white"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

    <Button
            android:text="@string/genreNameOfoPaperback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOfChangingGenreToPaperback"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnOfChangingGenreToBusiness"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorPrimary_white"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

    <Button
            android:text="@string/genreNameOfPocketbook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOfChangingGenreToPocketbook"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnOfChangingGenreToPaperback"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorPrimary_white"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

    <Button
            android:text="@string/genreNameOfAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOfChangingGenreToAll"
            android:background="@color/colorPrimary_white"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnOfChangingGenreToLightNovel"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:textStyle="bold" />

    <Button
            android:text="@string/genreNameOfLightNovel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOfChangingGenreToLightNovel"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnOfChangingGenreToPocketbook"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorPrimary_white"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />
</android.support.constraint.ConstraintLayout>
