<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.readmemo.BookDetailActivity">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="190dp" app:srcCompat="@android:color/background_light"
            android:id="@+id/bookImageOfDetailView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/bookPublisherOfDetailView" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/RecordedBooksListImgDescription" />

    <TextView
            android:text="@string/methodOfNamingBookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/bookImageOfDetailView"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />
    <TextView
            android:text=""
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bookTitleOfDetailView"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/textView7"/>

    <TextView
            android:text="@string/methodOfNamingAuthor"
            android:layout_width="30dp"
            android:layout_height="18dp"
            android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/bookTitleOfDetailView"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/bookTitleOfDetailView" />
    <TextView
            android:text=""
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bookAuthorOfDetailView"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/textView10" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:textColor="@android:color/black" app:layout_constraintStart_toStartOf="@+id/textView10"/>

    <TextView
            android:text="@string/methodOfNamingPublisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/bookAuthorOfDetailView"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/bookAuthorOfDetailView" />
    <TextView
            android:text=""
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bookPublisherOfDetailView"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:textColor="@android:color/black" app:layout_constraintStart_toStartOf="@+id/bookAuthorOfDetailView"/>

    <TextView
            android:text="@string/methodOfNamingOutline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text123"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/bookImageOfDetailView"
            android:layout_marginTop="24dp" />
    <TextView
            android:text=""
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/bookAbstractOfDetailView"
            app:layout_constraintTop_toBottomOf="@+id/text123" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnAddingBookWillRead" android:textColor="@android:color/black"/>

    <Button
            android:text="@string/btnAddingBookWillRead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddingBookWillRead"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnOpeningRakutenBooks"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorPrimary_white"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="18sp" />

    <Button
            android:text="@string/btnOpeningRakutenBooks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnOpeningRakutenBooks"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorPrimary_white"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="18sp" />

    <TextView
            android:text="@string/btnSearchingByAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSearchingByAuthor"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView10"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            android:clickable="true"
            android:focusable="true" />

    <TextView
            android:text="@string/btnSearchingByPublisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSearchingByPublisher"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView13"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            android:clickable="true"
            android:focusable="true" />
</android.support.constraint.ConstraintLayout>
