<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        tools:context=".BookEditActivity">
    <!--descendantFocusability&&focusableInTouchModeでフォーカスを外す-->
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/apiURL"
            tools:layout_editor_absoluteY="16dp" tools:layout_editor_absoluteX="16dp"
            tools:ignore="MissingConstraints" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:text="@string/TitleFieldLabelOfEditView"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/titleField"
            android:maxLines="2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/bookImage"
            android:layout_marginRight="8dp"
            android:autofillHints=""
            tools:ignore="LabelFor" />

    <TextView
            android:text="@string/AuthorFieldLabelOfEditView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/titleField"
            android:layout_marginTop="3dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/authorField"
            android:maxLines="2"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintEnd_toStartOf="@+id/bookImage" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:autofillHints=""
            tools:ignore="LabelFor" />

    <TextView
            android:text="@string/memoFieldLabelOfEditView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/detailField"
            android:minLines="2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/saveBtn" android:gravity="start"
            android:textSize="14sp"
            android:autofillHints=""
            tools:ignore="LabelFor" />

    <Button
            android:text="@string/recordDeleteBtnLabelOfEditView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/recordDeleteBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@android:color/darker_gray"
            android:textSize="18sp"
            android:textStyle="bold" />
    <ImageView
            android:layout_width="150dp"
            android:layout_height="190dp"
            android:id="@+id/bookImage"
            android:scaleType="fitCenter"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:contentDescription="@string/RecordedBooksListImgDescription" />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/addedDate" android:visibility="invisible" tools:layout_editor_absoluteY="383dp"
            tools:layout_editor_absoluteX="16dp"
            tools:ignore="LabelFor,MissingConstraints"
            android:autofillHints="" />
    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup" android:orientation="horizontal" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:gravity="center" android:layout_marginTop="3dp">

        <RadioButton
                android:text="@string/BookStatusNameOfEditView_HaveRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/statusHaveRead"
                android:layout_weight="1" />

        <RadioButton
                android:text="@string/BookStatusNameOfEditView_Reading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/statusReading"
                android:layout_weight="1" />

        <RadioButton
                android:text="@string/BookStatusNameOfEditView_WillRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/statusWillRead"
                android:layout_weight="1" />
    </RadioGroup>

    <TextView
            android:text="@string/statusCheckboxLabelOfEditView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/publisherField"
            android:layout_marginTop="3dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

    <Button
            android:text="@string/saveBtnLabelOfEditView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/saveBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/recordDeleteBtn"
            android:background="@android:color/holo_orange_light"
            android:textColor="@android:color/black"
            android:textIsSelectable="false"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold" />

    <TextView
            android:text="@string/publisherFieldLabelOfEditView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/authorField"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/publisherField"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/bookImage"
            android:layout_marginRight="8dp"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    <ListView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/searchedBooksList"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="326dp"
            tools:layout_editor_absoluteX="86dp" android:id="@+id/outlinetext" android:visibility="invisible"
            tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>